# jarvis-local-ai

./: .env.example  .gitignore  README.md  pyproject.toml  test_ctime.py
docs/: architecture-review-phase-0.md  architecture-v1.md
jarvis/: __init__.py
jarvis/api/: __init__.py  http.py  schemas.py  websocket.py
jarvis/app/: daemon.py  terminal.py
jarvis/approvals/: broker.py  models.py
jarvis/config/: __init__.py  manager.py  models.py  secrets.py
jarvis/core/: __init__.py  consolidation.py  event_bus.py  events.py  orphan_recovery.py  process_registry.py  process_utils.py  recovery.py  reflection.py
jarvis/logging/: redaction.py  setup.py
jarvis/memory/: store.py
jarvis/models/: __init__.py  (+6 more)
scratch/: fix_json.py  repro.py
tests/: test_api.py  test_api_v1.py  test_approval_broker.py  test_approval_center.py  test_build_tool.py  test_cli.py  test_cli_v1.py  test_command_runner.py  test_config.py  test_consolidation.py  test_dotenv_startup.py  test_event_bus.py  test_generic_command.py  test_git_tool.py  test_memory_api.py  test_memory_browser.py  test_memory_ranking.py  test_memory_storage.py  test_memory_store.py  test_model_router.py  test_models_providers.py  test_ollama.py  test_openrouter.py  test_orphan_recovery.py  test_patch_tool.py  test_planner.py  test_planner_context.py  test_reflection.py  test_registries.py  test_secrets.py  test_storage.py  test_system_recovery.py  test_task_api.py  test_task_approvals.py  test_task_cli.py  test_task_queue.py  test_task_storage.py  test_test_tool.py  test_tools_foundation.py  test_tools_security.py  (+3 more)
(+40 files in other folders)
