[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jarvis"
version = "0.1.0"
description = "Local-first Jarvis-style AI assistant foundation."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "platformdirs>=4.0.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
jarvis = "jarvis.app.terminal:app"

[dependency-groups]
dev = [
    "mypy>=1.10.0",
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
warn_unused_configs = true
ignore_missing_imports = true
strict_optional = true
check_untyped_defs = true

